tests/ui/abi/simd-abi-checks-avx.stderr
error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:60:11
   |
LL |         f(g());
   |           ^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:60:9
   |
LL |         f(g());
   |         ^^^^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:66:14
   |
LL |         gavx(favx());
   |              ^^^^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:66:9
   |
LL |         gavx(favx());
   |         ^^^^^^^^^^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:76:19
   |
LL |         w(Wrapper(g()));
   |                   ^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `Wrapper` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:76:9
   |
LL |         w(Wrapper(g()));
   |         ^^^^^^^^^^^^^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:90:9
   |
LL |         some_extern();
   |         ^^^^^^^^^^^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function definition uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled
  --> $DIR/simd-abi-checks-avx.rs:25:1
   |
LL | unsafe extern "C" fn g() -> __m256 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function definition uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled
  --> $DIR/simd-abi-checks-avx.rs:20:1
   |
LL | unsafe extern "C" fn f(_: __m256) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function definition uses SIMD vector type `Wrapper` which (with the chosen ABI) requires the `avx` target feature, which is not enabled
  --> $DIR/simd-abi-checks-avx.rs:15:1
   |
LL | unsafe extern "C" fn w(_: Wrapper) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

error: this function call uses SIMD vector type `std::arch::x86_64::__m256` which (with the chosen ABI) requires the `avx` target feature, which is not enabled in the caller
  --> $DIR/simd-abi-checks-avx.rs:54:8
   |
LL |     || g()
   |        ^^^ function called here
   |
   = help: consider enabling it globally (`-C target-feature=+avx`) or locally (`#[target_feature(enable="avx")]`)

note: the above error was encountered while instantiating `fn in_closure::{closure#0}`
  --> $DIR/simd-abi-checks-avx.rs:82:9
   |
LL |         in_closure()();
   |         ^^^^^^^^^^^^^^

error: aborting due to 11 previous errors

